# ToaruPen_Template

./: .gitignore  AGENTS.md  DESIGN.md  Makefile  README.md  pyproject.toml
docs/adr/: 0001-manifest-centered-specialization.md  decision-log.md
harness/: capabilities.schema.json  capability-profile.yaml  compatibility-matrix.yaml  context-index.yaml  manifest.yaml  oracles.yaml  policy.yaml  review.yaml  rules.yaml
harness/examples/: manifest-specialization.example.yaml
harness/projections/: README.md  anthropic-claude.yaml  openai-agents.yaml
reports/: adr-check.json  compatibility-matrix.json  oracles-readiness.json  projection-sync.json  rules-check.json
scripts/: check_adr.py  check_adr_decision.py  check_compatibility_matrix.py  check_compatibility_matrix.rb  check_oracles_ready.py  check_oracles_ready.rb  check_projection_sync.py  check_projection_sync.rb  check_rules.py  check_rules.rb  create_adr_decision.py
tests/: test_adr_decision_scripts.py  test_check_adr.py  test_check_compatibility_matrix.py  test_check_oracles_ready.py  test_check_projection_sync.py  test_check_rules.py
